# scribe

./: .SRCINFO  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  TROUBLESHOOTING.md  install.sh  rustfmt.toml  scribe.install  scribe.service  setup-hooks.sh
.cargo/: config.toml
.git-hooks/: pre-commit
.github/workflows/: ci.yml  release.yml
config/: default.toml
examples/: test_inject.rs  test_vad.rs
src/: error.rs  lib.rs  main.rs
src/audio/: capture.rs  mod.rs  vad.rs
src/config/: mod.rs  schema.rs
src/input/: inject.rs  mod.rs
src/ipc/: client.rs  mod.rs  server.rs
src/models/: download.rs  manager.rs  manifest.rs  mod.rs  registry.rs
src/notifications/: mod.rs
src/transcription/: api.rs  local.rs  mod.rs
src/tray/: icons.rs  mod.rs
tests/: ipc_integration.rs  transcription_tests.rs
