[package]
name = "scribe"
version = "0.1.0"
edition = "2021"
description = "Fast, lean voice dictation system using Whisper"
repository = "https://github.com/abjoru/scribe"
license = "MIT"
keywords = ["voice", "dictation", "whisper", "transcription"]
categories = ["multimedia", "accessibility"]

[dependencies]
# Audio
cpal = "0.15"
hound = "3.5"

# VAD
webrtc-vad = "0.4"

# Transcription (starting with ONNX Runtime, can add candle later)
# Note: Using RC version as 2.0 is not stable yet
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP (for API)
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Process management
subprocess = "0.2"

# System tray (StatusNotifierItem)
ksni = "0.2"

# Desktop notifications
notify-rust = "4"

# Unix utilities
nix = { version = "0.29", features = ["user"] }

# Serialization for IPC
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
