[package]
name = "scribe"
version = "0.1.0"
edition = "2021"
description = "Fast, lean voice dictation system using Whisper"
repository = "https://github.com/abjoru/scribe"
license = "MIT"
keywords = ["voice", "dictation", "whisper", "transcription"]
categories = ["multimedia", "accessibility"]

[dependencies]
# Audio
cpal = "0.15"
hound = "3.5"

# VAD
webrtc-vad = "0.4"

# Transcription - Candle (Hugging Face Rust ML framework)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.15"
hf-hub = "0.3"

# Audio processing for mel spectrogram
byteorder = "1.5"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP (for API)
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Process management
subprocess = "0.2"

# System tray (StatusNotifierItem)
ksni = "0.2"

# Desktop notifications
notify-rust = "4"

# Unix utilities
nix = { version = "0.29", features = ["user"] }

# Serialization for IPC
serde_json = "1.0"

# Utility for finding executables
which = "7.0"

# Directory utilities
dirs = "5.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
serial_test = "3.0"
