[package]
name = "scribe"
version = "0.1.3"
edition = "2021"
description = "Fast, lean voice dictation system using Whisper"
repository = "https://github.com/abjoru/scribe"
license = "MIT"
keywords = ["voice", "dictation", "whisper", "transcription"]
categories = ["multimedia", "accessibility"]

[dependencies]
# Audio
cpal = "0.15"
hound = "3.5"

# VAD
webrtc-vad = "0.4"

# Transcription - Candle (Hugging Face Rust ML framework)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.15"
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "default-tls"] }

# Audio processing for mel spectrogram
byteorder = "1.5"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP (for API) - use native-tls (system OpenSSL) for AUR compatibility
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "native-tls"] }

# Process management
subprocess = "0.2"

# System tray (StatusNotifierItem)
ksni = "0.2"

# SVG rendering for tray icons
resvg = { version = "0.44", default-features = false }

# Desktop notifications
notify-rust = "4"

# Unix utilities
nix = { version = "0.29", features = ["user", "fs"] }

# Serialization for IPC
serde_json = "1.0"

# Utility for finding executables
which = "7.0"

# Directory utilities
dirs = "5.0"

# Time utilities
chrono = "0.4"

# Progress bars for downloads
indicatif = "0.17"

# Streaming utilities
futures-util = "0.3"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
serial_test = "3.0"
tempfile = "3.0"
